<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.photosort.Activities.MainActivity">

    <ImageView
        android:id="@+id/selectedImage"
        android:layout_width="275dp"
        android:layout_height="157dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/content_descripton"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnChangeImageLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="28dp"
        android:onClick="scrollLeft"
        android:text="@string/left_button"
        app:layout_constraintBottom_toTopOf="@+id/selectedImage"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnChangeImageRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="28dp"
        android:onClick="scrollRight"
        android:text="@string/right_button"
        app:layout_constraintBottom_toTopOf="@+id/selectedImage"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/snapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:onClick="snapPhoto"
        android:text="@string/snap_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/filterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="filterPhotos"
        android:text="@string/filter_button"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/enlargeButton"
        android:layout_marginEnd="147dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/enlargeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:onClick="enlargePhoto"
        android:text="@string/enlarge_button"
        app:layout_constraintBottom_toTopOf="@+id/selectedImage"
        app:layout_constraintLeft_toRightOf="@+id/btnChangeImageLeft"
        app:layout_constraintRight_toLeftOf="@+id/btnChangeImageRight" />

    <ListView
        android:id="@+id/tagListView"
        android:layout_width="175dp"
        android:layout_height="182dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="31dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="30dp"
        tools:layout_editor_absoluteX="193dp" />

</android.support.constraint.ConstraintLayout>
